<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.0.13</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.sensetimeframework</groupId>
    <artifactId>sensetime-framework</artifactId>
    <version>apple</version>
    <name>sensetime-framework</name>
    <packaging>pom</packaging>
    <modules>
        <!-- tool -->
        <module>statistics-tool</module>
        <!-- starter -->
        <module>minio-spring-boot-starter</module>
    </modules>
    <properties>
        <java.version>21</java.version>
        <lombok.version>1.18.30</lombok.version>
        <minio.version>8.5.2</minio.version>
        <commons.io.version>2.11.0</commons.io.version>
        <commons.compress.version>1.21</commons.compress.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <scope>compile</scope>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>io.minio</groupId>
                <artifactId>minio</artifactId>
                <version>${minio.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons.io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-compress</artifactId>
                <version>${commons.compress.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
